# polis

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  PROMPT.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
docs/: compatibility.md  customization.md  distribution-verification.md  evaluation-corpus-v3-review-checklist.md  evaluation-dataset.md  evaluation-safety-corpus-v1-review-checklist.md  limitations.md  llm-corrected-text-contract.md  llm-prompt-response-contract.md  llm-quality-gates.md  offline-operation.md  performance-baseline.md  prerelease-candidate.md  privacy-audit.md  privacy.md  public-api.md  quality-baseline.md  quick-start.md  release-errata.md  release-lifecycle.md  rules.md  segmentation.md
examples/: polis.toml
scripts/: bootstrap_github.py  generate_finetuning_dataset.py  generate_safety_corpus_candidates.py  release_identity.py  run_sentence_release_case.py  run_sentence_safety_case.py  typecheck_api_contract.py  typecheck_protocols.py  validate_fast_ci_workflow.py  verify_distribution_artifacts.py  verify_distribution_install.py  verify_prerelease_candidate.py
tests/: test_agreement_rules.py  test_analysis_apply.py  test_analysis_normalization.py  test_analysis_pipeline.py  test_analyzer_languagetool_config.py  test_api_compatibility.py  test_api_contract.py  test_architecture_policy.py  test_bootstrap_github.py  test_cli.py  test_conflict_detection.py  test_conservative_correction.py  test_contextual_inflection_routing.py  test_contextual_inflection_rule.py  test_corrected_text_contract.py  test_correction_corpus_v3.py  test_dependency_licenses.py  test_distribution_artifacts.py  test_e2e_polish_corrections.py  test_evaluation_dataset.py  test_fast_ci_workflow.py  test_finetuning_dataset.py  test_hybrid_architecture_policy.py  test_hybrid_suggestion_engine.py  test_inflection_candidate_benchmark.py  test_languagetool_benchmark.py  test_languagetool_corpus_quality.py  test_languagetool_rule.py  test_languagetool_rule_inventory.py  test_languagetool_stdio_benchmark.py  test_languagetool_stdio_documentation.py  test_languagetool_stdio_session.py  test_languagetool_vendor_artifacts.py  (+37 more)
(+244 files in other folders)
