[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "polis-nlp"
version = "0.1.0"
description = "Offline Polish text analysis and minimal correction library."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Paweł Cyroń" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: Polish",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.3.0",
  "hatchling>=1.27.0",
  "mypy>=2.3.0",
  "pytest>=9.0.0",
  "ruff>=0.15.0",
]

[project.urls]
Homepage = "https://github.com/PSyron/polis"
Repository = "https://github.com/PSyron/polis"

[project.scripts]
polis = "polis.cli:main"

[tool.uv]
required-version = "==0.11.2"

[tool.hatch.build.targets.wheel]
packages = ["src/polis"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests/typecheck", "/third_party/languagetool-pl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
pythonpath = ["."]
markers = [
  "slow: tests excluded from per-change CI because they are resource intensive",
  "model: tests that require a real local language model",
]

[tool.ruff]
line-length = 88
src = ["src"]
include = ["pyproject.toml", "scripts/**/*.py", "src/**/*.py", "tests/**/*.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"scripts/bootstrap_github.py" = ["E501"]

[tool.mypy]
files = ["src", "tests"]
exclude = ["^tests/typecheck/"]
strict = true
warn_unused_configs = true
follow_imports = "skip"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["scripts.bootstrap_github"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_decorators = false
